src/main/java/org/endeavourhealth/imapi/parser/iml/IMLParser.java
// Generated from C:/Users/david/GithubRepos/IMAPI/src/main/grammars/IML.g4 by ANTLR 4.13.2
package iml;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class IMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, DEFINE=2, PREFIX=3, DEFAULT=4, ASSIGN=5, AS=6, MATCH=7, FROM=8, 
		EITHER=9, OR=10, AND=11, EXCLUDE=12, IF=13, OF=14, IS=15, IN=16, ON=17, 
		BETWEEN=18, WITH=19, WHERE=20, LATEST=21, EARLIEST=22, LARGEST=23, SMALLEST=24, 
		RELATIVE=25, TO=26, OPEN_BRACE=27, CLOSE_BRACE=28, OPEN_PAREN=29, CLOSE_PAREN=30, 
		ARROW=31, OPTIONAL_ARROW=32, REVERSE_ARROW=33, COMMA=34, GT=35, GTE=36, 
		LT=37, LTE=38, EQ=39, NEQ=40, PNAME_NS=41, IDENTIFIER=42, NODEREF=43, 
		PARAMETER=44, IRI=45, NUMBER=46, WS=47, COMMENT=48, BLOCK_COMMENT=49;
	public static final int
		RULE_iml = 0, RULE_prefix = 1, RULE_default = 2, RULE_definition = 3, 
		RULE_expression = 4, RULE_assignment = 5, RULE_iriRef = 6, RULE_matchType = 7, 
		RULE_type = 8, RULE_match = 9, RULE_path = 10, RULE_orderBy = 11, RULE_matchIn = 12, 
		RULE_from = 13, RULE_keepAs = 14, RULE_booleanMatch = 15, RULE_nestedBooleanMatch = 16, 
		RULE_disjunctionMatch = 17, RULE_exclusionMatch = 18, RULE_conjunctionMatch = 19, 
		RULE_disjunctionWhere = 20, RULE_conjunctionWhere = 21, RULE_nestedBooleanWhere = 22, 
		RULE_booleanWhere = 23, RULE_whereClause = 24, RULE_where = 25, RULE_property = 26, 
		RULE_propertyOf = 27, RULE_whereIs = 28, RULE_concept = 29, RULE_disjunctionConcept = 30, 
		RULE_whereRange = 31, RULE_units = 32, RULE_whereRelativeTo = 33, RULE_whereValue = 34, 
		RULE_functionExpression = 35, RULE_methodCall = 36, RULE_argumentList = 37, 
		RULE_comparisonOperator = 38, RULE_simpleExpression = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"iml", "prefix", "default", "definition", "expression", "assignment", 
			"iriRef", "matchType", "type", "match", "path", "orderBy", "matchIn", 
			"from", "keepAs", "booleanMatch", "nestedBooleanMatch", "disjunctionMatch", 
			"exclusionMatch", "conjunctionMatch", "disjunctionWhere", "conjunctionWhere", 
			"nestedBooleanWhere", "booleanWhere", "whereClause", "where", "property", 
			"propertyOf", "whereIs", "concept", "disjunctionConcept", "whereRange", 
			"units", "whereRelativeTo", "whereValue", "functionExpression", "methodCall", 
			"argumentList", "comparisonOperator", "simpleExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'{'", "'}'", "'('", "')'", "'->'", "'?->'", "'<-'", 
			"','", "'>'", "'>='", "'<'", "'<='", "'='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "DEFINE", "PREFIX", "DEFAULT", "ASSIGN", "AS", "MATCH", "FROM", 
			"EITHER", "OR", "AND", "EXCLUDE", "IF", "OF", "IS", "IN", "ON", "BETWEEN", 
			"WITH", "WHERE", "LATEST", "EARLIEST", "LARGEST", "SMALLEST", "RELATIVE", 
			"TO", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_PAREN", "CLOSE_PAREN", "ARROW", 
			"OPTIONAL_ARROW", "REVERSE_ARROW", "COMMA", "GT", "GTE", "LT", "LTE", 
			"EQ", "NEQ", "PNAME_NS", "IDENTIFIER", "NODEREF", "PARAMETER", "IRI", 
			"NUMBER", "WS", "COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IML.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(IMLParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public PrefixContext prefix() {
			return getRuleContext(PrefixContext.class,0);
		}
		public DefaultContext default_() {
			return getRuleContext(DefaultContext.class,0);
		}
		public ImlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterIml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitIml(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitIml(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImlContext iml() throws RecognitionException {
		ImlContext _localctx = new ImlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_iml);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				definition();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEFINE );
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(85);
				assignment();
				}
			}

			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PREFIX) {
				{
				setState(88);
				prefix();
				}
			}

			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DEFAULT) {
				{
				setState(91);
				default_();
				}
			}

			setState(94);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrefixContext extends ParserRuleContext {
		public TerminalNode PREFIX() { return getToken(IMLParser.PREFIX, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(IMLParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(IMLParser.CLOSE_BRACE, 0); }
		public List<TerminalNode> PNAME_NS() { return getTokens(IMLParser.PNAME_NS); }
		public TerminalNode PNAME_NS(int i) {
			return getToken(IMLParser.PNAME_NS, i);
		}
		public List<TerminalNode> IRI() { return getTokens(IMLParser.IRI); }
		public TerminalNode IRI(int i) {
			return getToken(IMLParser.IRI, i);
		}
		public PrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterPrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitPrefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitPrefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrefixContext prefix() throws RecognitionException {
		PrefixContext _localctx = new PrefixContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prefix);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(PREFIX);
			setState(97);
			match(OPEN_BRACE);
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(98);
				match(PNAME_NS);
				setState(99);
				match(IRI);
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PNAME_NS );
			setState(104);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefaultContext extends ParserRuleContext {
		public TerminalNode DEFAULT() { return getToken(IMLParser.DEFAULT, 0); }
		public TerminalNode EQ() { return getToken(IMLParser.EQ, 0); }
		public TerminalNode IRI() { return getToken(IMLParser.IRI, 0); }
		public DefaultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_default; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterDefault(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitDefault(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitDefault(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefaultContext default_() throws RecognitionException {
		DefaultContext _localctx = new DefaultContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_default);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(DEFAULT);
			setState(107);
			match(EQ);
			setState(108);
			match(IRI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(IMLParser.DEFINE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(DEFINE);
			setState(111);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode IRI() { return getToken(IMLParser.IRI, 0); }
		public TerminalNode AS() { return getToken(IMLParser.AS, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(IMLParser.OPEN_BRACE, 0); }
		public MatchTypeContext matchType() {
			return getRuleContext(MatchTypeContext.class,0);
		}
		public TerminalNode CLOSE_BRACE() { return getToken(IMLParser.CLOSE_BRACE, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(IRI);
			setState(114);
			match(AS);
			setState(115);
			match(OPEN_BRACE);
			setState(116);
			matchType();
			setState(117);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(IMLParser.ASSIGN, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(IMLParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(IMLParser.CLOSE_BRACE, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(IMLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(IMLParser.IDENTIFIER, i);
		}
		public List<TerminalNode> EQ() { return getTokens(IMLParser.EQ); }
		public TerminalNode EQ(int i) {
			return getToken(IMLParser.EQ, i);
		}
		public List<IriRefContext> iriRef() {
			return getRuleContexts(IriRefContext.class);
		}
		public IriRefContext iriRef(int i) {
			return getRuleContext(IriRefContext.class,i);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ASSIGN);
			setState(120);
			match(OPEN_BRACE);
			setState(124); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(121);
				match(IDENTIFIER);
				setState(122);
				match(EQ);
				setState(123);
				iriRef();
				}
				}
				setState(126); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			setState(128);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IriRefContext extends ParserRuleContext {
		public TerminalNode PNAME_NS() { return getToken(IMLParser.PNAME_NS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(IMLParser.IDENTIFIER, 0); }
		public TerminalNode IRI() { return getToken(IMLParser.IRI, 0); }
		public IriRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iriRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterIriRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitIriRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitIriRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IriRefContext iriRef() throws RecognitionException {
		IriRefContext _localctx = new IriRefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_iriRef);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PNAME_NS:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(130);
				match(PNAME_NS);
				setState(131);
				match(T__0);
				setState(132);
				match(IDENTIFIER);
				}
				}
				break;
			case IRI:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				match(IRI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchTypeContext extends ParserRuleContext {
		public TerminalNode MATCH() { return getToken(IMLParser.MATCH, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public MatchContext match() {
			return getRuleContext(MatchContext.class,0);
		}
		public BooleanMatchContext booleanMatch() {
			return getRuleContext(BooleanMatchContext.class,0);
		}
		public MatchTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterMatchType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitMatchType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitMatchType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchTypeContext matchType() throws RecognitionException {
		MatchTypeContext _localctx = new MatchTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_matchType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(MATCH);
			setState(137);
			type();
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(138);
				match();
				}
				break;
			case 2:
				{
				setState(139);
				booleanMatch();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(IMLParser.IDENTIFIER, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchContext extends ParserRuleContext {
		public MatchInContext matchIn() {
			return getRuleContext(MatchInContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public OrderByContext orderBy() {
			return getRuleContext(OrderByContext.class,0);
		}
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public KeepAsContext keepAs() {
			return getRuleContext(KeepAsContext.class,0);
		}
		public FromContext from() {
			return getRuleContext(FromContext.class,0);
		}
		public MatchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_match; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterMatch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitMatch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitMatch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchContext match() throws RecognitionException {
		MatchContext _localctx = new MatchContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_match);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 31457280L) != 0)) {
				{
				setState(144);
				orderBy();
				}
			}

			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 15032385536L) != 0)) {
				{
				setState(147);
				path();
				}
			}

			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IN:
				{
				setState(150);
				matchIn();
				}
				break;
			case FROM:
				{
				{
				setState(151);
				from();
				setState(152);
				whereClause();
				}
				}
				break;
			case WHERE:
				{
				setState(154);
				whereClause();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(157);
				keepAs();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PathContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(IMLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(IMLParser.IDENTIFIER, i);
		}
		public List<TerminalNode> ARROW() { return getTokens(IMLParser.ARROW); }
		public TerminalNode ARROW(int i) {
			return getToken(IMLParser.ARROW, i);
		}
		public List<TerminalNode> OPTIONAL_ARROW() { return getTokens(IMLParser.OPTIONAL_ARROW); }
		public TerminalNode OPTIONAL_ARROW(int i) {
			return getToken(IMLParser.OPTIONAL_ARROW, i);
		}
		public List<TerminalNode> REVERSE_ARROW() { return getTokens(IMLParser.REVERSE_ARROW); }
		public TerminalNode REVERSE_ARROW(int i) {
			return getToken(IMLParser.REVERSE_ARROW, i);
		}
		public PathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).enterPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMLListener ) ((IMLListener)listener).exitPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IMLVisitor ) return ((IMLVisitor<? extends T>)visitor).visitPath(this);
			else return visitor.visitChildren(this);
		}
	}
